--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
@@ -17,28 +16,64 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Prodomor</title>
   </head>
   <body>
-    <div>
-      <div id="timer">
-        <button>prodomor</button>
-        <button>Short</button> <br />
-        <input type="number" value="25" id="time" /> <br />
-        <br />
+    <div class="row">
+      <section class="col-12" id="timer">
         <h1 id="phut"></h1>
         <h1>:</h1>
         <h1 id="second"></h1>
         <br />
-        <button id="start">START</button>
-        <button id="stop">STOP</button>
-      </div>
+        <button id="start" type="button" class="btn btn-warning">START</button>
+        <button id="stop" type="button" class="btn btn-warning">STOP</button>
+      </section>
+
+      <section class="col-6" id="plan">
+        <h3>Lên chương trình học:</h3>
+        <ol id="plan-content"></ol>
+        <div class="input-group mb-3">
+          <input
+            id="seHoc"
+            type="text"
+            class="form-control"
+            placeholder="Nội dung sẽ học"
+            aria-label="Recipient's username"
+            aria-describedby="basic-addon2"
+          />
+          <div id="up-task" class="btn-warning input-group-append">
+            <button class="btn btn-outline-secondary" type="button">
+              Add Task +
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="col-6" id="Result">
+        <h3>Result</h3>
+        <ol id="Complete"></ol>
+        <div class="input-group mb-3">
+          <input
+            id="ketQua"
+            type="text"
+            class="form-control"
+            placeholder="Kết quả"
+            aria-label="Recipient's username"
+            aria-describedby="basic-addon2"
+          />
+          <div id="up-result" class="btn-warning input-group-append">
+            <button class="btn btn-outline-secondary" type="button">
+              Add Task +
+            </button>
+          </div>
+        </div>
+      </section>
+      <section id="input">
+        Chose time <br />
+        <input type="text" id="tasker" placeholder="Sẽ học nội dung..." />
+        <input type="number" value="25" id="time" /> <br />
+      </section>
     </div>
-    <section id="Task">
-      <h3>Chiến tích nè anh zai</h3>
-      <input type="text" id="tasker" placeholder="muốn làm gì zợ ^^" />
-      <p id="task-content"></p>
-    </section>
     <script src="model.js"></script>
   </body>
 </html>
